<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context="comp3350.AAS.presentation.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="69dp"
        android:background="#453F3F"
        android:gravity="center"
        android:scaleX="0.9"
        android:text="Create a Flash Card"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextDescription"
        android:layout_width="499dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="239dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:hint="Description"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#070707" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextTitle"
        android:layout_width="499dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="167dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="Title"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#020202" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextFolderName"
        android:layout_width="496dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="298dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="Folder Name"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#020202" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="601dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="469dp"
        android:layout_marginEnd="-1dp"
        android:backgroundTint="#453F3F"
        android:gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.9"
        android:text="Submit"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/viewFoldersButton"
        android:layout_width="601dp"
        android:layout_height="88dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="551dp"
        android:layout_marginEnd="-1dp"
        android:backgroundTint="#453F3F"
        android:gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.9"
        android:text="View Folders"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

</RelativeLayout>