<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/home_background"
    tools:context=".presentation.QuizHomeActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CreateMcqQuiz"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="#C6FF00"
        android:gravity="center"
        android:scaleX="0.75"
        android:scaleY="0.9"
        android:text="Create Multi-Choice question"
        android:textColor="#000000"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CreateTfQuiz"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="300dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="#C6FF00"
        android:gravity="center"
        android:scaleX="0.75"
        android:scaleY="0.9"
        android:text="Create \nTrue/False question"
        android:textColor="#000000"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/StartQuiz"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:backgroundTint="#C6FF00"
        android:gravity="center"
        android:scaleX="0.7"
        android:scaleY="0.9"
        android:text="start quizzes"
        android:textColor="#000000"
        android:textSize="40sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ViewQuizAnswer"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="485dp"
        android:backgroundTint="#C6FF00"
        android:gravity="center"
        android:scaleX="0.7"
        android:scaleY="0.9"
        android:text="View quiz answer"
        android:textColor="#000000"
        android:textSize="40sp" />

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/homePage"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="140dp"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="650dp"-->
<!--        android:backgroundTint="#C6FF00"-->
<!--        android:gravity="center"-->
<!--        android:scaleX="0.7"-->
<!--        android:scaleY="0.9"-->
<!--        android:text="home"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="40sp" />-->

</RelativeLayout>